--- a/css/main.css
+++ b/css/main.css
@@ -65,9 +65,19 @@ img {
 }
 
 .container {
-  width: 1200px;
+  max-width: 480px;
   margin: 0 auto;
   padding: 0 15px;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .section {
@@ -495,10 +505,25 @@ img {
   display: flex;
   gap: 30px;
 }
+@media screen and (max-width: 767px) {
+  .features {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) {
+  .features {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 
 .features__title {
   width: 270px;
-  margin-bottom: 10px;
+  text-align: center;
+  margin: 0 auto 10px;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 14px;
@@ -523,10 +548,20 @@ img {
 }
 
 .features__desc {
-  width: 270px;
+  width: 450px;
   margin: 0;
   line-height: 1.71;
   color: var(--secondary-txt-cl);
+}
+@media screen and (min-width: 768px) {
+  .features__desc {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__desc {
+    width: 270px;
+  }
 }
 
 /* Чим ми займаємося */
