--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,6 +6,15 @@
 .team {
     display: flex;
     gap: 30px;
+
+    @media screen and (max-width: 767px) {
+        flex-direction: column;
+    }
+
+    @media screen and (min-width: 768px) {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
 
 .team__item {
