--- a/sass/components/_activities.scss
+++ b/sass/components/_activities.scss
@@ -6,6 +6,11 @@
 .activities {
     display: flex;
     gap: 30px;
+    
+    @media screen and (max-width: 1199px) {
+        display: none;
+        
+    }
 }
 
 .activities__item {
