--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,6 +2,9 @@
 .clients {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .clients__item {
