--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -2,13 +2,9 @@
 .features {
     display: flex;
     gap: 30px;
-
-    @media screen and (max-width: 767px) {
-        flex-direction: column;
-    }
-
-    @media screen and (min-width: 768px) {
-        flex-wrap: wrap; }
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .features__title {
