--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,15 +6,10 @@
 .team {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 
-    @media screen and (max-width: 767px) {
-        flex-direction: column;
-    }
-
-    @media screen and (min-width: 768px) {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
 }
 
 .team__item {
