--- a/sass/components/_activities.scss
+++ b/sass/components/_activities.scss
@@ -6,10 +6,14 @@
 .activities {
     display: flex;
     gap: 30px;
-    
+
+
+}
+
+.section--display-none {
     @media screen and (max-width: 1199px) {
         display: none;
-        
+
     }
 }
 
