--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,6 +6,11 @@
     font-size: 26px;
     line-height: 1.38;
     color: var(--accent-cl);
+
+        @media screen and (max-width: 1199px) {
+            font-size: 24px;
+            line-height: 1.16;
+            }
 }
 
 .logo__dark {
