--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -1,8 +1,8 @@
 /* header nav */
-.nav {
-    display: flex;
-    align-items: center;
-}
+// .nav {
+//     display: flex;
+//     align-items: center;
+// }
 
 .site-nav {
     display: flex;
