--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,13 +5,43 @@
     text-align: center;
 
     background-color: var(--dark-bg-cl);
-    background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero-img.jpeg);
-
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     max-width: 1600px;
     margin: 0 auto;
+
+    // background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero-img.jpeg);
+
+    background-image: url(../images/hero_sm-@1x.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image: url(../images/hero_sm-@2x.jpg);
+    }
+
+    // Tablet images
+    @media screen and (min-width: 768px) {
+        background-image: url(../images/hero_md-@1x.jpg);
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: url(../images/hero_md-@2x.jpg);
+        }
+    }
+
+    // Desktop images
+    @media screen and (min-width: 1200px) {
+        background-image: url(../images/hero_lg-@1x.jpg);
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: url(../images/hero_lg-@2x.jpg);
+        }
+    }
 }
 
 .hero__title {
