--- a/sass/components/_portfolio-tabs.scss
+++ b/sass/components/_portfolio-tabs.scss
@@ -1,10 +1,39 @@
 /* portfolio tabs */
 .tab__list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-    gap: 8px;
+    margin-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        gap: 8px;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+    }
 }
+
+.tab__wrap-1--mobile-display {
+    display: flex;
+    gap: 8px;
+
+    @media screen and (max-width: 767px) {
+        margin-right: auto;
+        margin-bottom: 15px;
+    }
+}
+
+.tab__wrap-2--mobile-display {
+    display: flex;
+
+    gap: 8px;
+
+    @media screen and (max-width: 767px) {
+        margin-right: auto;
+    }
+}
+
 
 .tab__button {
     padding: 6px 22px;
