--- a/sass/components/_header-base.scss
+++ b/sass/components/_header-base.scss
@@ -1,11 +1,23 @@
 /* HEADER */
 .header {
-    padding-top: 24px;
-    padding-bottom: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
     border-bottom: 1px solid #ececec;
+
+    @media screen and (min-width: 768px) {
+
+        padding-top: 21px;
+        padding-bottom: 21px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 24px;
+        padding-bottom: 25px;
+    }
 }
 
-// .header__container {
-//     display: flex;
-//     align-items: center;
-// }
+.header__container {
+    display: flex;
+    align-items: center;
+}
