--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -7,6 +7,10 @@
 
 .header__contacts {
     margin-left: auto;
+
+    @media screen and (max-width: 767px) {
+        display: none;
+    }
 }
 
 .contacts__link {
