--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -8,6 +8,9 @@
     display: flex;
     align-items: center;
     gap: 50px;
+    @media screen and (max-width: 767px) {
+            display: none;
+        }
 }
 
 .site-nav__item {
