--- a/sass/components/_header-mobile-menu.scss
+++ b/sass/components/_header-mobile-menu.scss
@@ -23,7 +23,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 40px 48px;
+    padding: 48px 40px;
 
     background-color: var(--white-txt-cl);
 
@@ -57,4 +57,26 @@
     margin-left: auto;
     top: 10px;
     right: 15px;
+    color: var(--primary-txt-cl);
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--accent-cl);
+        border-color: var(--accent-cl);
+    }
+}
+.menu-toggle__icon {
+    fill: currentColor;
+}
+.mobile-menu__link {
+    text-decoration: none;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--primary-txt-cl);
 }
