--- a/sass/components/_portfolio-products.scss
+++ b/sass/components/_portfolio-products.scss
@@ -5,6 +5,13 @@
     gap: 30px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+.product__item {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+    }
+
+
 .product__desc {
     padding: 20px 24px;
     border: 1px solid var(--border-cl);
