--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -11,6 +11,12 @@
     @media screen and (max-width: 767px) {
         display: none;
     }
+                @media screen and (max-width: 1199px) {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                   
+                }
 }
 
 .contacts__link {
