--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -36,6 +36,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
+
+    @media screen and (max-width: 1199px) {
+        width: 450px;
+        height: 609px;
+    }
 }
 
 .modal__button {
