--- a/sass/components/_portfolio-products.scss
+++ b/sass/components/_portfolio-products.scss
@@ -2,6 +2,7 @@
 .product {
     display: flex;
     flex-wrap: wrap;
+ 
     gap: 30px;
 
 }
@@ -9,14 +10,18 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
 .product__item {
         flex-basis: calc((100% - 30px) / 2);
+    }
+        .product__desc--height {
+            height: 148.08px;
+        }
+    }
 
-    }
-    }
 
 
 .product__desc {
     padding: 20px 24px;
     border: 1px solid var(--border-cl);
+
 
 }
 
