--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -8,8 +8,16 @@
 }
 
 .clients__item {
-    width: 170px;
+    width: 210px;
     height: 92px;
+
+    @media screen and (min-width: 768px) {
+        width: 226px;
+    }
+
+    @media screen and (min-width: 1199px) {
+        width: 170px;
+    }
 }
 
 .clients__link {
