--- a/sass/components/_header-mobile-menu.scss
+++ b/sass/components/_header-mobile-menu.scss
@@ -98,6 +98,9 @@
         color: var(--accent-cl);
     }
 }
+.mobile-menu__link--current {
+    color: var(--accent-cl);
+}
 .mobile-contacts {
     display: flex;
     flex-direction: column;
@@ -125,7 +128,7 @@
 .mobile-socials {
 
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 .mobile-socials__link {
 
@@ -136,19 +139,28 @@
     color: var(--accent-cl);
 
     letter-spacing: 0.02em;
-}
-.mobile-socials__item {
-    position: relative;
+
+
 }
 
-.mobile-socials__link::after {
-    content: '';
-    display: inline-block;
-    width: 22px;
-    height: 0px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transform: rotate(90deg);
-    position: absolute;
-    left: 100%;
-    top: 50%;
+.mobile-socials__item:not(:last-child) {
+    padding-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);;
 }
+
+
+// .mobile-socials__item {
+//     position: relative;
+// }
+
+// .mobile-socials__link::after {
+//     content: '';
+//     display: inline-block;
+//     width: 22px;
+//     height: 0px;
+//     border: 1px solid rgba(33, 33, 33, 0.2);
+//     transform: rotate(90deg);
+//     position: absolute;
+//     left: 100%;
+//     top: 50%;
+// }
