--- a/sass/components/_footer-base.scss
+++ b/sass/components/_footer-base.scss
@@ -6,7 +6,13 @@
 
 .footer__container {
     display: flex;
+
     justify-content: center;
     align-items: baseline;
-flex-wrap: wrap;
+    flex-wrap: wrap;
+
+    @media screen and (max-width: 767px) {
+        flex-direction: column;
+        align-items: center;
+    }
 }
