--- a/sass/components/_footer-contacts.scss
+++ b/sass/components/_footer-contacts.scss
@@ -7,12 +7,32 @@
     display: flex;
     flex-direction: column;
     gap: 9px;
+
+    @media screen and (max-width: 767px) {
+        align-items: center;
+        margin-bottom: 60px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        text-align: center;
+    }
 }
 
-.footer-contacts-wrap--indent {
-    margin-right: 70px;
-    flex-grow: 1;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .footer-contacts-wrap--indent {
+        margin-right: 165px;
+        flex-grow: 1;
+    }
 }
+
+@media screen and (min-width: 1200px) {
+
+    .footer-contacts-wrap--indent {
+        margin-right: 70px;
+        flex-grow: 1;
+    }
+}
+
 
 .footer-contacts__link {
     text-decoration: none;
@@ -27,6 +47,9 @@
     &:focus {
         color: var(--accent-cl);
     }
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+
+        }
 }
 
 .footer-contacts__link--address {
