--- a/sass/components/_footer-base.scss
+++ b/sass/components/_footer-base.scss
@@ -15,4 +15,7 @@
         flex-direction: column;
         align-items: center;
     }
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+            justify-content: space-around;
+        }
 }
