--- a/sass/components/_footer-contacts.scss
+++ b/sass/components/_footer-contacts.scss
@@ -10,7 +10,7 @@
 
     @media screen and (max-width: 767px) {
         align-items: center;
-        margin-bottom: 60px;
+
     }
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -18,12 +18,18 @@
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (max-width: 767px) {
     .footer-contacts-wrap--indent {
-        margin-right: 165px;
-        flex-grow: 1;
+        margin-bottom: 60px;
     }
 }
+
+// @media screen and (min-width: 768px) and (max-width: 1199px) {
+//     .footer-contacts-wrap--indent {
+//         margin-right: 165px;
+//         flex-grow: 1;
+//     }
+// }
 
 @media screen and (min-width: 1200px) {
 
