--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -51,7 +51,7 @@
 .footer-form__input {
     font-size: 16px;
     line-height: 1.25;
-    width: 358px;
+    width: 100%;
     height: 50px;
     color: var(--placeholder-footer-cl);
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -64,10 +64,14 @@
         font-size: 16px;
         color: var(--placeholder-footer-cl);
     }
+         @media screen and (min-width: 768px) {
+             width: 450px;
+         }
+ @media screen and (min-width: 1200px) {
+    width: 358px;
+ }
 
-    @media screen and (max-width: 1199px) {
-        width: 450px;
-    }
+
 }
 
 
@@ -76,6 +80,7 @@
     height: 50px;
     color: var(--white-txt-cl);
     background-color: var(--accent-cl);
+    border: transparent;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     letter-spacing: 0.06em;
