--- a/sass/components/_footer-socials.scss
+++ b/sass/components/_footer-socials.scss
@@ -1,13 +1,16 @@
 /* footer socials */
 
 .footer-socials--indent {
-    margin-right: 93px;
+
 
     @media screen and (max-width: 767px) {
-        margin: 0 auto;
+
         margin-bottom: 60px;
     }
 
+    @media screen and (min-width: 1200px) {
+        margin-right: 93px;
+    }
 }
 
 .footer-socials__caption {
@@ -16,7 +19,7 @@
     line-height: 1.14;
     font-weight: 700;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 1199px) {
         text-align: center;
     }
 }
