--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,33 +13,33 @@
 
     // background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero-img.jpeg);
 
-    background-image: url(../images/hero_sm-@1x.jpg);
+    background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero_sm-@1x.jpg);
 
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-        background-image: url(../images/hero_sm-@2x.jpg);
+        background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero_sm-@2x.jpg);
     }
 
     // Tablet images
     @media screen and (min-width: 768px) {
-        background-image: url(../images/hero_md-@1x.jpg);
+        background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero_md-@1x.jpg);
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: url(../images/hero_md-@2x.jpg);
+            background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero_md-@2x.jpg);
         }
     }
 
     // Desktop images
     @media screen and (min-width: 1200px) {
-        background-image: url(../images/hero_lg-@1x.jpg);
+        background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero_lg-@1x.jpg);
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: url(../images/hero_lg-@2x.jpg);
+            background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/hero_lg-@2x.jpg);
         }
 
         padding-top: 200px;
@@ -60,7 +60,7 @@
     color: var(--white-txt-cl);
 
     @media screen and (max-width: 1199px) {
-        width: 360px;
+        width: 100%;
         font-size: 26px;
         line-height: 1.62;
 
