--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -18,7 +18,9 @@
 }
 
 .logo--header-indent {
-    margin-right: 88px;
+    @media screen and (min-width: 768px) {
+        margin-right: 88px;
+    }
 
     @media screen and (min-width: 1200px) {
         margin-right: 93px;
