--- a/sass/components/_modal-register-form.scss
+++ b/sass/components/_modal-register-form.scss
@@ -130,11 +130,15 @@
 }
 
 .agreement__desc {
-    font-size: 13px;
+    font-size: 14px;
     line-height: 1.71;
     user-select: none;
     color: var(--secondary-txt-cl);
 
+    @media screen and (max-width: 1199px) {
+        font-size: 12px;
+        line-height: 1.17;
+    }
 
 }
 
@@ -145,7 +149,10 @@
     color: var(--accent-cl);
 
     @media screen and (max-width: 1199px) {
-line-height: 1.17;}}
+        font-size: 12px;
+        line-height: 1.17;
+    }
+}
 
 .agreement__icon-checked {
     opacity: 0;
